--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bs4==0.0.1
 certifi==2021.10.8
 charset-normalizer==2.0.7
 idna==3.3
+PySimpleGUI==4.55.1
 requests==2.26.0
 soupsieve==2.3.1
 urllib3==1.26.7
